# boyfriend

./: .gitignore  LICENSE  README.md
boyfriend-chatbot/: __init__.py  inference.py  load_env.py  main.py  requirements.txt  test.py
boyfriend-chatbot/collection/: .dockerignore  main.py  model.py  requirements.txt
boyfriend-voice/: requirements.txt
client-for-boyfriend/: .gitignore  CMakeLists.txt  build.sh  code.go  go.mod  go.sum  main  main.cpp  main.go  utils.go  vcpkg.json
client-for-boyfriend/grpc-client/: grpc_service.pb.go  health.pb.go  health_grpc.pb.go  model_config.pb.go
client-for-boyfriend/include/args/: args.h
client-for-boyfriend/include/audio/: audio.h
client-for-boyfriend/include/network/: libnetwork.h
client-for-boyfriend/service/: api.go  client.go
client-for-boyfriend/src/args/: args.cpp
client-for-boyfriend/src/include/internal/: recorder.h
collection_from_telegram/: .dockerignore  .env  Dockerfile  READMD.md  database.go  docker-compose.yml  env.go  gemini.go  go.mod  go.sum  main.go
collection_to_csv/: .env  Dockerfile  environment.py  main.py  model.py
inference_server/: demo.sh  docker-compose.yml
scripts/: Makefile  activate_venv.sh  create_venv.sh
train/: main.py  requirements.txt
